--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
+    "dev:electron": "vite",
     "build": "vue-tsc -b && vite build",
+    "build:electron": "vue-tsc -b && vite build && electron-builder",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,10 +22,14 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.23",
+    "electron": "^40.1.0",
+    "electron-builder": "^26.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "vue-tsc": "^3.1.4"
   }
 }
