--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/exec": "^7.1.0",
+    "@semantic-release/github": "^12.0.3",
+    "@semantic-release/npm": "^13.1.3",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -25,6 +30,7 @@
     "electron": "^40.1.0",
     "electron-builder": "^26.7.0",
     "postcss": "^8.5.6",
+    "semantic-release": "^25.0.3",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
